[package]
name = "price"
version = "0.1.0"
authors = ["fpChan <fpchen@outlook.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# network request
async-trait = "0.1.40"
reqwest = { version = "0.10", features = ["blocking", "json"] }
tokio = { version = "0.2", features = ["full"] }
async-std = { version = "1.2.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"
ckb-sdk = { git = "https://github.com/nervosnetwork/ckb-cli.git", tag = "v0.33.0" }

#ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
anyhow = "1.0"
chrono = "0.4.13"
log = "0.4"

# ckb
secp256k1 = "0.17.0"
faster-hex = "0.4"
lazy_static = "1.3"
ckb-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
ckb-hash = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
ckb-crypto = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1", features = ["secp"] }
ckb-jsonrpc-types = { git = "https://github.com/nervosnetwork/ckb", tag = "v0.33.0-pre1" }
jsonrpc-core = "14.0"
# ckb-indexer = { git = "https://github.com/cosinlink/ckb-indexer", rev = "065aeee" }
failure = "0.1.5"
config = "0.9"

# toml config
toml = "0.5.6"
serde_derive = "1.0.115"